--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -42,11 +42,16 @@
     <file>images/boardwindow/eye.png</file>
     <file>images/boardwindow/noeye.png</file>
     <file>images/boardwindow/connected.png</file>
-    <file>images/board/wood2.png</file>
     <file>images/board/wood1.png</file>
+    <file>images/board/wood2.png</file>
     <file>images/board/wood3.png</file>
     <file>images/board/wood4.png</file>
     <file>images/board/wood5.png</file>
+    <file>images/board/icon-wood1.png</file>
+    <file>images/board/icon-wood2.png</file>
+    <file>images/board/icon-wood3.png</file>
+    <file>images/board/icon-wood4.png</file>
+    <file>images/board/icon-wood5.png</file>
     <file>images/board/table.png</file>
   </qresource>
   <qresource prefix="/Help">
