Add an option to show own chat in a different color
Requested in #42. For now, only done for board windows, not the talk tab.

--- a/src/preferences_gui.ui
+++ b/src/preferences_gui.ui
@@ -4602,6 +4602,39 @@ If checked then when a game you played completes, it is automatically saved in t
          </layout>
         </widget>
        </item>
+       <item row="14" column="1">
+        <widget class="QWidget" name="widget_4" native="true">
+         <layout class="QHBoxLayout" name="horizontalLayout_7">
+          <item>
+           <widget class="QCheckBox" name="chatColorCheckBox">
+            <property name="text">
+             <string>Own chat colored:</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="chatColorButton">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </widget>
+       </item>
       </layout>
      </widget>
      <widget class="QWidget" name="variantsTabWidget">
