Don't accept rich text in talk tab
This displays messages obtained from other players, and we don't want it
to be interpreted as rich text - that might cause unexpected results.

--- a/src/talk_gui.ui
+++ b/src/talk_gui.ui
@@ -111,6 +111,9 @@ in this box you see the conversation with the player whose name appears on the t
      <property name="readOnly">
       <bool>true</bool>
      </property>
+     <property name="acceptRichText">
+      <bool>false</bool>
+     </property>
     </widget>
    </item>
    <item row="0" column="0">
