Set uniform size flag for database games list, for performance

--- a/src/dbdialog_gui.ui
+++ b/src/dbdialog_gui.ui
@@ -31,6 +31,9 @@
        <property name="selectionBehavior">
         <enum>QAbstractItemView::SelectRows</enum>
        </property>
+       <property name="uniformItemSizes">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
