Add database options to the greeter window

--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -151,6 +151,7 @@
     <file>images/clientwindow/not_quiet.png</file>
     <file>images/clientwindow/not_seeking.png</file>
     <file>images/clientwindow/open.png</file>
+    <file>images/clientwindow/open-search.png</file>
     <file>images/clientwindow/prefs.png</file>
     <file>images/clientwindow/qgo.png</file>
     <file>images/clientwindow/quiet.png</file>
