--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -30,6 +30,7 @@
     <file>images/boardwindow/rect_select.png</file>
     <file>images/boardwindow/clear_select.png</file>
     <file>images/boardwindow/home.png</file>
+    <file>images/boardwindow/anchor.png</file>
     <file>images/boardwindow/search.png</file>
     <file>images/boardwindow/searchall.png</file>
     <file>images/boardwindow/figure.png</file>
