--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -106,6 +106,8 @@
     <file>images/pause.png</file>
     <file>images/trash.png</file>
     <file>images/lightbulb.png</file>
+    <file>images/red-x.png</file>
+    <file>images/green-check.png</file>
 
     <file>sounds/click.wav</file>
     <file>sounds/connect.wav</file>
