Add a few statistics displays to the pattern search
Not really complete, or at least not as extensive as what Kombilo can
display. The main goal here is to get it started, and to get the window
to what is probably the final layout, so we can add code to save/restore the
size.

--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -51,6 +51,8 @@
     <file>images/boardwindow/viewnumbers.png</file>
     <file>images/boardwindow/goto-cont.png</file>
     <file>images/boardwindow/refresh.png</file>
+    <file>images/boardwindow/bars.png</file>
+    <file>images/boardwindow/lines.png</file>
     <file>images/board/wood1.png</file>
     <file>images/board/wood2.png</file>
     <file>images/board/wood3.png</file>
