--- a/src/q4go.qrc
+++ b/src/q4go.qrc
@@ -107,6 +107,7 @@
     <file>images/trash.png</file>
     <file>images/lightbulb.png</file>
     <file>images/red-x.png</file>
+    <file>images/yellow-exclam.png</file>
     <file>images/green-check.png</file>
 
     <file>sounds/click.wav</file>
